[gd_scene load_steps=9 format=2]

[ext_resource path="res://MainMenu/Pictures/TheLogo.png" type="Texture" id=1]
[ext_resource path="res://MainMenu/Pictures/MainMenuBG.png" type="Texture" id=2]
[ext_resource path="res://MainMenu/Fonts/Dalek 30.tres" type="DynamicFont" id=3]
[ext_resource path="res://MainMenu/Fonts/Sprite14.tres" type="DynamicFont" id=4]
[ext_resource path="res://MainMenu/Menu.gd" type="Script" id=5]
[ext_resource path="res://MainMenu/Pictures/SoundOn.png" type="Texture" id=6]
[ext_resource path="res://MainMenu/Pictures/SoundOff.png" type="Texture" id=7]
[ext_resource path="res://MainMenu/SoundBtn.gd" type="Script" id=8]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 261.0
margin_top = 22.0
margin_right = 211.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 18.0
margin_top = 246.0
margin_right = 240.0
margin_bottom = 260.0
custom_fonts/font = ExtResource( 4 )
text = "Version 1.0 by Anton Jastsuk, Leonid Maznitsa and Allan Ivanov"

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 18.0
margin_top = 46.0
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="NewGameBtn" type="Button" parent="Menu"]
margin_right = 222.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
text = "New Game"
flat = true

[node name="ContinueGameBtn" type="Button" parent="Menu"]
margin_top = 40.0
margin_right = 222.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 3 )
text = "Continue Game"
flat = true

[node name="OptionsBtn" type="Button" parent="Menu"]
margin_top = 80.0
margin_right = 222.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 3 )
text = "Options"
flat = true

[node name="HelpBtn" type="Button" parent="Menu"]
margin_top = 120.0
margin_right = 222.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 3 )
text = "Help"
flat = true

[node name="QuitBtn" type="Button" parent="Menu"]
margin_top = 160.0
margin_right = 222.0
margin_bottom = 196.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"
flat = true

[node name="SoundBtn" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.652, 0.65 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 7 )
script = ExtResource( 8 )

[connection signal="pressed" from="Menu/NewGameBtn" to="Menu" method="_on_NewGameBtn_pressed"]
[connection signal="pressed" from="Menu/OptionsBtn" to="Menu" method="_on_OptionsBtn_pressed"]
[connection signal="pressed" from="Menu/HelpBtn" to="Menu" method="_on_HelpBtn_pressed"]
[connection signal="pressed" from="Menu/QuitBtn" to="Menu" method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="SoundBtn" to="SoundBtn" method="_on_SoundBtn_pressed"]
